parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    THEN

Grammar

Rule 0     S' -> start
Rule 1     start -> linst
Rule 2     linst -> linst inst
Rule 3     linst -> inst
Rule 4     inst -> IF LPAREN expression RPAREN LACCOL linst RACCOL
Rule 5     inst -> WHILE LPAREN expression RPAREN LACCOL linst RACCOL
Rule 6     inst -> NAME EQUAL expression COLON
Rule 7     inst -> PRINT LPAREN expression RPAREN COLON
Rule 8     expression -> expression PLUS expression
Rule 9     expression -> expression MINUS expression
Rule 10    expression -> expression TIMES expression
Rule 11    expression -> expression OR expression
Rule 12    expression -> expression AND expression
Rule 13    expression -> expression EQUALS expression
Rule 14    expression -> expression LOWER expression
Rule 15    expression -> expression HIGHER expression
Rule 16    expression -> expression DIVIDE expression
Rule 17    expression -> LPAREN expression RPAREN
Rule 18    expression -> NUMBER
Rule 19    expression -> NAME

Terminals, with rules where they appear

AND                  : 12
COLON                : 6 7
DIVIDE               : 16
EQUAL                : 6
EQUALS               : 13
HIGHER               : 15
IF                   : 4
LACCOL               : 4 5
LOWER                : 14
LPAREN               : 4 5 7 17
MINUS                : 9
NAME                 : 6 19
NUMBER               : 18
OR                   : 11
PLUS                 : 8
PRINT                : 7
RACCOL               : 4 5
RPAREN               : 4 5 7 17
THEN                 : 
TIMES                : 10
WHILE                : 5
error                : 

Nonterminals, with rules where they appear

expression           : 4 5 6 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17
inst                 : 2 3
linst                : 1 2 4 5
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . linst
    (2) linst -> . linst inst
    (3) linst -> . inst
    (4) inst -> . IF LPAREN expression RPAREN LACCOL linst RACCOL
    (5) inst -> . WHILE LPAREN expression RPAREN LACCOL linst RACCOL
    (6) inst -> . NAME EQUAL expression COLON
    (7) inst -> . PRINT LPAREN expression RPAREN COLON

    IF              shift and go to state 4
    WHILE           shift and go to state 5
    NAME            shift and go to state 6
    PRINT           shift and go to state 7

    start                          shift and go to state 1
    linst                          shift and go to state 2
    inst                           shift and go to state 3

state 1

    (0) S' -> start .



state 2

    (1) start -> linst .
    (2) linst -> linst . inst
    (4) inst -> . IF LPAREN expression RPAREN LACCOL linst RACCOL
    (5) inst -> . WHILE LPAREN expression RPAREN LACCOL linst RACCOL
    (6) inst -> . NAME EQUAL expression COLON
    (7) inst -> . PRINT LPAREN expression RPAREN COLON

    $end            reduce using rule 1 (start -> linst .)
    IF              shift and go to state 4
    WHILE           shift and go to state 5
    NAME            shift and go to state 6
    PRINT           shift and go to state 7

    inst                           shift and go to state 8

state 3

    (3) linst -> inst .

    IF              reduce using rule 3 (linst -> inst .)
    WHILE           reduce using rule 3 (linst -> inst .)
    NAME            reduce using rule 3 (linst -> inst .)
    PRINT           reduce using rule 3 (linst -> inst .)
    $end            reduce using rule 3 (linst -> inst .)
    RACCOL          reduce using rule 3 (linst -> inst .)


state 4

    (4) inst -> IF . LPAREN expression RPAREN LACCOL linst RACCOL

    LPAREN          shift and go to state 9


state 5

    (5) inst -> WHILE . LPAREN expression RPAREN LACCOL linst RACCOL

    LPAREN          shift and go to state 10


state 6

    (6) inst -> NAME . EQUAL expression COLON

    EQUAL           shift and go to state 11


state 7

    (7) inst -> PRINT . LPAREN expression RPAREN COLON

    LPAREN          shift and go to state 12


state 8

    (2) linst -> linst inst .

    IF              reduce using rule 2 (linst -> linst inst .)
    WHILE           reduce using rule 2 (linst -> linst inst .)
    NAME            reduce using rule 2 (linst -> linst inst .)
    PRINT           reduce using rule 2 (linst -> linst inst .)
    $end            reduce using rule 2 (linst -> linst inst .)
    RACCOL          reduce using rule 2 (linst -> linst inst .)


state 9

    (4) inst -> IF LPAREN . expression RPAREN LACCOL linst RACCOL
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression EQUALS expression
    (14) expression -> . expression LOWER expression
    (15) expression -> . expression HIGHER expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 14

state 10

    (5) inst -> WHILE LPAREN . expression RPAREN LACCOL linst RACCOL
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression EQUALS expression
    (14) expression -> . expression LOWER expression
    (15) expression -> . expression HIGHER expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 17

state 11

    (6) inst -> NAME EQUAL . expression COLON
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression EQUALS expression
    (14) expression -> . expression LOWER expression
    (15) expression -> . expression HIGHER expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 18

state 12

    (7) inst -> PRINT LPAREN . expression RPAREN COLON
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression EQUALS expression
    (14) expression -> . expression LOWER expression
    (15) expression -> . expression HIGHER expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 19

state 13

    (17) expression -> LPAREN . expression RPAREN
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression EQUALS expression
    (14) expression -> . expression LOWER expression
    (15) expression -> . expression HIGHER expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 20

state 14

    (4) inst -> IF LPAREN expression . RPAREN LACCOL linst RACCOL
    (8) expression -> expression . PLUS expression
    (9) expression -> expression . MINUS expression
    (10) expression -> expression . TIMES expression
    (11) expression -> expression . OR expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . EQUALS expression
    (14) expression -> expression . LOWER expression
    (15) expression -> expression . HIGHER expression
    (16) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 21
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    TIMES           shift and go to state 24
    OR              shift and go to state 25
    AND             shift and go to state 26
    EQUALS          shift and go to state 27
    LOWER           shift and go to state 28
    HIGHER          shift and go to state 29
    DIVIDE          shift and go to state 30


state 15

    (18) expression -> NUMBER .

    RPAREN          reduce using rule 18 (expression -> NUMBER .)
    PLUS            reduce using rule 18 (expression -> NUMBER .)
    MINUS           reduce using rule 18 (expression -> NUMBER .)
    TIMES           reduce using rule 18 (expression -> NUMBER .)
    OR              reduce using rule 18 (expression -> NUMBER .)
    AND             reduce using rule 18 (expression -> NUMBER .)
    EQUALS          reduce using rule 18 (expression -> NUMBER .)
    LOWER           reduce using rule 18 (expression -> NUMBER .)
    HIGHER          reduce using rule 18 (expression -> NUMBER .)
    DIVIDE          reduce using rule 18 (expression -> NUMBER .)
    COLON           reduce using rule 18 (expression -> NUMBER .)


state 16

    (19) expression -> NAME .

    RPAREN          reduce using rule 19 (expression -> NAME .)
    PLUS            reduce using rule 19 (expression -> NAME .)
    MINUS           reduce using rule 19 (expression -> NAME .)
    TIMES           reduce using rule 19 (expression -> NAME .)
    OR              reduce using rule 19 (expression -> NAME .)
    AND             reduce using rule 19 (expression -> NAME .)
    EQUALS          reduce using rule 19 (expression -> NAME .)
    LOWER           reduce using rule 19 (expression -> NAME .)
    HIGHER          reduce using rule 19 (expression -> NAME .)
    DIVIDE          reduce using rule 19 (expression -> NAME .)
    COLON           reduce using rule 19 (expression -> NAME .)


state 17

    (5) inst -> WHILE LPAREN expression . RPAREN LACCOL linst RACCOL
    (8) expression -> expression . PLUS expression
    (9) expression -> expression . MINUS expression
    (10) expression -> expression . TIMES expression
    (11) expression -> expression . OR expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . EQUALS expression
    (14) expression -> expression . LOWER expression
    (15) expression -> expression . HIGHER expression
    (16) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 31
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    TIMES           shift and go to state 24
    OR              shift and go to state 25
    AND             shift and go to state 26
    EQUALS          shift and go to state 27
    LOWER           shift and go to state 28
    HIGHER          shift and go to state 29
    DIVIDE          shift and go to state 30


state 18

    (6) inst -> NAME EQUAL expression . COLON
    (8) expression -> expression . PLUS expression
    (9) expression -> expression . MINUS expression
    (10) expression -> expression . TIMES expression
    (11) expression -> expression . OR expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . EQUALS expression
    (14) expression -> expression . LOWER expression
    (15) expression -> expression . HIGHER expression
    (16) expression -> expression . DIVIDE expression

    COLON           shift and go to state 32
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    TIMES           shift and go to state 24
    OR              shift and go to state 25
    AND             shift and go to state 26
    EQUALS          shift and go to state 27
    LOWER           shift and go to state 28
    HIGHER          shift and go to state 29
    DIVIDE          shift and go to state 30


state 19

    (7) inst -> PRINT LPAREN expression . RPAREN COLON
    (8) expression -> expression . PLUS expression
    (9) expression -> expression . MINUS expression
    (10) expression -> expression . TIMES expression
    (11) expression -> expression . OR expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . EQUALS expression
    (14) expression -> expression . LOWER expression
    (15) expression -> expression . HIGHER expression
    (16) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 33
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    TIMES           shift and go to state 24
    OR              shift and go to state 25
    AND             shift and go to state 26
    EQUALS          shift and go to state 27
    LOWER           shift and go to state 28
    HIGHER          shift and go to state 29
    DIVIDE          shift and go to state 30


state 20

    (17) expression -> LPAREN expression . RPAREN
    (8) expression -> expression . PLUS expression
    (9) expression -> expression . MINUS expression
    (10) expression -> expression . TIMES expression
    (11) expression -> expression . OR expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . EQUALS expression
    (14) expression -> expression . LOWER expression
    (15) expression -> expression . HIGHER expression
    (16) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 34
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    TIMES           shift and go to state 24
    OR              shift and go to state 25
    AND             shift and go to state 26
    EQUALS          shift and go to state 27
    LOWER           shift and go to state 28
    HIGHER          shift and go to state 29
    DIVIDE          shift and go to state 30


state 21

    (4) inst -> IF LPAREN expression RPAREN . LACCOL linst RACCOL

    LACCOL          shift and go to state 35


state 22

    (8) expression -> expression PLUS . expression
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression EQUALS expression
    (14) expression -> . expression LOWER expression
    (15) expression -> . expression HIGHER expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 36

state 23

    (9) expression -> expression MINUS . expression
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression EQUALS expression
    (14) expression -> . expression LOWER expression
    (15) expression -> . expression HIGHER expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 37

state 24

    (10) expression -> expression TIMES . expression
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression EQUALS expression
    (14) expression -> . expression LOWER expression
    (15) expression -> . expression HIGHER expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 38

state 25

    (11) expression -> expression OR . expression
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression EQUALS expression
    (14) expression -> . expression LOWER expression
    (15) expression -> . expression HIGHER expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 39

state 26

    (12) expression -> expression AND . expression
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression EQUALS expression
    (14) expression -> . expression LOWER expression
    (15) expression -> . expression HIGHER expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 40

state 27

    (13) expression -> expression EQUALS . expression
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression EQUALS expression
    (14) expression -> . expression LOWER expression
    (15) expression -> . expression HIGHER expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 41

state 28

    (14) expression -> expression LOWER . expression
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression EQUALS expression
    (14) expression -> . expression LOWER expression
    (15) expression -> . expression HIGHER expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 42

state 29

    (15) expression -> expression HIGHER . expression
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression EQUALS expression
    (14) expression -> . expression LOWER expression
    (15) expression -> . expression HIGHER expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 43

state 30

    (16) expression -> expression DIVIDE . expression
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression EQUALS expression
    (14) expression -> . expression LOWER expression
    (15) expression -> . expression HIGHER expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 44

state 31

    (5) inst -> WHILE LPAREN expression RPAREN . LACCOL linst RACCOL

    LACCOL          shift and go to state 45


state 32

    (6) inst -> NAME EQUAL expression COLON .

    IF              reduce using rule 6 (inst -> NAME EQUAL expression COLON .)
    WHILE           reduce using rule 6 (inst -> NAME EQUAL expression COLON .)
    NAME            reduce using rule 6 (inst -> NAME EQUAL expression COLON .)
    PRINT           reduce using rule 6 (inst -> NAME EQUAL expression COLON .)
    $end            reduce using rule 6 (inst -> NAME EQUAL expression COLON .)
    RACCOL          reduce using rule 6 (inst -> NAME EQUAL expression COLON .)


state 33

    (7) inst -> PRINT LPAREN expression RPAREN . COLON

    COLON           shift and go to state 46


state 34

    (17) expression -> LPAREN expression RPAREN .

    RPAREN          reduce using rule 17 (expression -> LPAREN expression RPAREN .)
    PLUS            reduce using rule 17 (expression -> LPAREN expression RPAREN .)
    MINUS           reduce using rule 17 (expression -> LPAREN expression RPAREN .)
    TIMES           reduce using rule 17 (expression -> LPAREN expression RPAREN .)
    OR              reduce using rule 17 (expression -> LPAREN expression RPAREN .)
    AND             reduce using rule 17 (expression -> LPAREN expression RPAREN .)
    EQUALS          reduce using rule 17 (expression -> LPAREN expression RPAREN .)
    LOWER           reduce using rule 17 (expression -> LPAREN expression RPAREN .)
    HIGHER          reduce using rule 17 (expression -> LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 17 (expression -> LPAREN expression RPAREN .)
    COLON           reduce using rule 17 (expression -> LPAREN expression RPAREN .)


state 35

    (4) inst -> IF LPAREN expression RPAREN LACCOL . linst RACCOL
    (2) linst -> . linst inst
    (3) linst -> . inst
    (4) inst -> . IF LPAREN expression RPAREN LACCOL linst RACCOL
    (5) inst -> . WHILE LPAREN expression RPAREN LACCOL linst RACCOL
    (6) inst -> . NAME EQUAL expression COLON
    (7) inst -> . PRINT LPAREN expression RPAREN COLON

    IF              shift and go to state 4
    WHILE           shift and go to state 5
    NAME            shift and go to state 6
    PRINT           shift and go to state 7

    linst                          shift and go to state 47
    inst                           shift and go to state 3

state 36

    (8) expression -> expression PLUS expression .
    (8) expression -> expression . PLUS expression
    (9) expression -> expression . MINUS expression
    (10) expression -> expression . TIMES expression
    (11) expression -> expression . OR expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . EQUALS expression
    (14) expression -> expression . LOWER expression
    (15) expression -> expression . HIGHER expression
    (16) expression -> expression . DIVIDE expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for EQUALS resolved as shift
  ! shift/reduce conflict for LOWER resolved as shift
  ! shift/reduce conflict for HIGHER resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
    RPAREN          reduce using rule 8 (expression -> expression PLUS expression .)
    COLON           reduce using rule 8 (expression -> expression PLUS expression .)
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    TIMES           shift and go to state 24
    OR              shift and go to state 25
    AND             shift and go to state 26
    EQUALS          shift and go to state 27
    LOWER           shift and go to state 28
    HIGHER          shift and go to state 29
    DIVIDE          shift and go to state 30

  ! PLUS            [ reduce using rule 8 (expression -> expression PLUS expression .) ]
  ! MINUS           [ reduce using rule 8 (expression -> expression PLUS expression .) ]
  ! TIMES           [ reduce using rule 8 (expression -> expression PLUS expression .) ]
  ! OR              [ reduce using rule 8 (expression -> expression PLUS expression .) ]
  ! AND             [ reduce using rule 8 (expression -> expression PLUS expression .) ]
  ! EQUALS          [ reduce using rule 8 (expression -> expression PLUS expression .) ]
  ! LOWER           [ reduce using rule 8 (expression -> expression PLUS expression .) ]
  ! HIGHER          [ reduce using rule 8 (expression -> expression PLUS expression .) ]
  ! DIVIDE          [ reduce using rule 8 (expression -> expression PLUS expression .) ]


state 37

    (9) expression -> expression MINUS expression .
    (8) expression -> expression . PLUS expression
    (9) expression -> expression . MINUS expression
    (10) expression -> expression . TIMES expression
    (11) expression -> expression . OR expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . EQUALS expression
    (14) expression -> expression . LOWER expression
    (15) expression -> expression . HIGHER expression
    (16) expression -> expression . DIVIDE expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for EQUALS resolved as shift
  ! shift/reduce conflict for LOWER resolved as shift
  ! shift/reduce conflict for HIGHER resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
    RPAREN          reduce using rule 9 (expression -> expression MINUS expression .)
    COLON           reduce using rule 9 (expression -> expression MINUS expression .)
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    TIMES           shift and go to state 24
    OR              shift and go to state 25
    AND             shift and go to state 26
    EQUALS          shift and go to state 27
    LOWER           shift and go to state 28
    HIGHER          shift and go to state 29
    DIVIDE          shift and go to state 30

  ! PLUS            [ reduce using rule 9 (expression -> expression MINUS expression .) ]
  ! MINUS           [ reduce using rule 9 (expression -> expression MINUS expression .) ]
  ! TIMES           [ reduce using rule 9 (expression -> expression MINUS expression .) ]
  ! OR              [ reduce using rule 9 (expression -> expression MINUS expression .) ]
  ! AND             [ reduce using rule 9 (expression -> expression MINUS expression .) ]
  ! EQUALS          [ reduce using rule 9 (expression -> expression MINUS expression .) ]
  ! LOWER           [ reduce using rule 9 (expression -> expression MINUS expression .) ]
  ! HIGHER          [ reduce using rule 9 (expression -> expression MINUS expression .) ]
  ! DIVIDE          [ reduce using rule 9 (expression -> expression MINUS expression .) ]


state 38

    (10) expression -> expression TIMES expression .
    (8) expression -> expression . PLUS expression
    (9) expression -> expression . MINUS expression
    (10) expression -> expression . TIMES expression
    (11) expression -> expression . OR expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . EQUALS expression
    (14) expression -> expression . LOWER expression
    (15) expression -> expression . HIGHER expression
    (16) expression -> expression . DIVIDE expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for EQUALS resolved as shift
  ! shift/reduce conflict for LOWER resolved as shift
  ! shift/reduce conflict for HIGHER resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
    RPAREN          reduce using rule 10 (expression -> expression TIMES expression .)
    COLON           reduce using rule 10 (expression -> expression TIMES expression .)
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    TIMES           shift and go to state 24
    OR              shift and go to state 25
    AND             shift and go to state 26
    EQUALS          shift and go to state 27
    LOWER           shift and go to state 28
    HIGHER          shift and go to state 29
    DIVIDE          shift and go to state 30
